--- a/package.json
+++ b/package.json
@@ -12,5 +12,11 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "zhipuai-sdk-nodejs-v4": "^0.1.12"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.14.0",
+    "eslint": "^9.14.0",
+    "globals": "^15.11.0",
+    "prettier": "^3.3.3"
   }
 }
